fixing sidbar footer and logo css alignment

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -58,9 +58,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px 15px 5px 15px;
+    padding: 35px 10px 15px 15px;
     margin: 25px 0px;
-    background: url('../../assets/techno.svg')no-repeat center 0 / 50%;
+    background: url('../../assets/techno.svg')no-repeat center 20px / 50%;
 }
 
 .top_section {
@@ -146,7 +146,7 @@ a.active:hover {
 }
 
 .footer_section {
-    padding: 10px 0px;
+    padding-bottom: 50px;
     display: flex;
     align-self: center;
     cursor: pointer;
